tests/context_with_equals_bad.stderr
tests/context_with_equals_bad.sl:7:15: error: SL1004: unexpected token
